# WonderTales

./: .gitignore  DEVELOPMENT_GUIDE.md  README.md  UNFOLD_ADMIN_GUIDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-helper.sh  erd.sh
ai/: .gitignore  Dockerfile  README.md  TIMESTAMPS_FIX_COMPLETE.md  TIMESTAMPS_INTEGRATION_GUIDE.md  cloned_voices.json  example.env  main.py  pyproject.toml  test_timestamps.py
ai/core/: config.py  exceptions.py  logging.py
ai/models/: schemas.py
ai/routers/: stories.py  voices.py
ai/services/: narration_service.py  story_service.py  story_store.py  voice_store.py
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  tailwind.config.js
backend/apps/admins/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/admins/migrations/: 0001_initial.py  0003_pricingplanmodel.py  0004_populate_pricing_plans.py
backend/apps/app_settings/: admin.py  apps.py  serializers.py  urls.py
backend/apps/blogs/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/blogs/migrations/: 0001_initial.py
backend/apps/story/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/story/migrations/: 0001_initial.py  0003_storymodel_word_timestamps.py  (+2 more)
backend/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/core/: settings.py  urls.py
backend/static/css/: custom_admin.css
backend/staticfiles/css/: custom_admin.css
backend/templates/registration/: password_reset_confirm.html  password_reset_email.txt
landingpage/: .env  (+4 more)
(+81 files in other folders)
